[package]
name = "ultra_queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
axum-macros = "0.3.7"
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.158", features = ["derive"] }
sha2 = "0.10.6"
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
